# ffxiv-tool

./: .gitignore  README.md  app.py  ffxivapi_comm.py  flask_router.py  pyproject.toml  summons.py
static/: style.css
templates/: index.html  main-template.html
