[tool.poetry]
name = "xiv-tool"
version = "0.1.0"
description = ""
authors = ["Justin Demetroff JustinDe"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
sqlalchemy = "^2.0.25"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
